--- a/Bars&Wires2.html
+++ b/Bars&Wires2.html
@@ -495,32 +495,32 @@
                             <div class="container p-0 main-container">
                                 <div id="item-design" class="section-item">
                                     <h2>
-                                        Design and Structure of Bars and Tubes:
+                                        Design and Structure of Bars and Wires:
                                     </h2>
                                     <p>
-                                        Bars and tubes are produced from various raw materials, often undergoing processes like hot rolling, cold drawing, or extrusion. These methods enhance surface finish, dimensional accuracy, and mechanical properties. Bars can come in shapes such as round, square, hexagonal, and flat, while tubes are typically available in seamless or welded configurations, catering to a wide range of applications.
+                                        Bars and wires are produced from various raw materials, often undergoing processes like hot rolling, cold drawing, or extrusion. These methods enhance surface finish, dimensional accuracy, and mechanical properties. Bars can come in shapes such as round, square, hexagonal, and flat, while wires are typically available in seamless or welded configurations, catering to a wide range of applications.
                                     </p>
                                 </div>
                                 <div id="item-type" class="section-item">
                                     <h2>
-                                        Types of Bars and Tubes:
+                                        Types of Bars and Wires:
                                     </h2>
                                     <p>
-                                        Bars and tubes are categorized based on their shapes and dimensions. Common types include:
+                                        Bars and Wires are categorized based on their shapes and dimensions. Common types include:
                                     </p>
                                     <ul>
-                                        <li>Round Bars and Tubes</li>
-                                        <li>Square Bars and Tubes</li>
-                                        <li>Hexagonal Bars and Tubes</li>
+                                        <li>Round Bars and Wires</li>
+                                        <li>Square Bars and Wires</li>
+                                        <li>Hexagonal Bars and Wires</li>
                                         <li>Flat Bars</li>
                                     </ul>
                                 </div>
                                 <div id="item-Properties" class="section-item">
                                     <h2>
-                                        Properties of Bars and Tubes:
+                                        Properties of Bars and Wires:
                                     </h2>
                                     <p>
-                                        Bars and tubes exhibit several advantageous properties, including:
+                                        Bars and Wires exhibit several advantageous properties, including:
                                     </p>
                                     <ul>
                                         <li>Excellent surface finish</li>
@@ -548,10 +548,10 @@
                                 </div>
                                 <div id="item-applications" class="section-item">
                                     <h2>
-                                        Applications of Bars and Tubes:
+                                        Applications of Bars and Wires:
                                     </h2>
                                     <p>
-                                        Bars and tubes find extensive applications across various industries, including but not limited to:
+                                        Bars and Wires find extensive applications across various industries, including but not limited to:
                                     </p>
                                     <ul>
                                         <li>Automotive components</li>
@@ -648,7 +648,7 @@
                     <!-- details -->
                     <!-- type heading -->
                     <div id="Stainless" class="header">
-                        <p>Stainless Steel Fasteners</p>
+                        <p>Stainless Steel Bars and Wires</p>
                     </div>
                     <!-- type heading -->
                     <!-- end: Page title -->
@@ -771,7 +771,7 @@
                         </div>
                     </section>
                     <div id="Nickel" class="header">
-                        <p>Nickel Alloy</p>
+                        <p>Nickel Alloy Bars and Wires </p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -852,7 +852,7 @@
                         </div>
                     </section>
                     <div id="Non Ferrous" class="header">
-                        <p>Non Ferrous Metal</p>
+                        <p>Non Ferrous Metal Bars and Wires </p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -957,7 +957,7 @@
                         </div>
                     </section>
                     <div id="Carbon" class="header">
-                        <p>Alloy Steel Fasteners</p>
+                        <p>Alloy Steel Bars and Wires </p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -1064,7 +1064,7 @@
                         </div>
                     </section>
                     <div id="Carbon" class="header">
-                        <p>Carbon Steel Fasteners</p>
+                        <p>Carbon Steel Bars and Wires </p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -1141,19 +1141,12 @@
                         </div>
                     </section>
                     <div id="products-section" class="header">
-                        <p>Fasteners Products</p>
+                        <p>Bars and Wires  Products</p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
                             <div class="gallery-container">
-                                <div class="gallery-box">
-                                    <div class="gallery-header">
-                                        Angel Bar
-                                    </div>
-                                    <div class="gallery-image">
-                                        <img src="Images\Bars&Wire\angel-bar1.jpg" alt="Welded Pipe">
-                                    </div>
-                                </div>
+                              
                                 <div class="gallery-box">
                                     <div class="gallery-header">
                                         Bright Bar
@@ -1186,14 +1179,7 @@
                                         <img src="Images\Bars&Wire\Hex Bar.jpg" alt="Welded Pipe">
                                     </div>
                                 </div>
-                                <div class="gallery-box">
-                                    <div class="gallery-header">
-                                        PVC Channel
-                                    </div>
-                                    <div class="gallery-image">
-                                        <img src="Images\Bars&Wire\pvc-channel bar.jpg" alt="Welded Pipe">
-                                    </div>
-                                </div>
+                               
                                 <div class="gallery-box">
                                     <div class="gallery-header">
                                         Square bar
