--- a/Fasteners2.html
+++ b/Fasteners2.html
@@ -750,7 +750,7 @@
                     </section>
                     <!-- Table -->
                     <div id="Nickel" class="header">
-                        <p>Nickel Alloy</p>
+                        <p>Nickel Alloy Fasteners</p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -854,7 +854,7 @@
                         </div>
                     </section>
                     <div id="Non Ferrous" class="header">
-                        <p>Non Ferrous Metal</p>
+                        <p>Non Ferrous Metal Fasteners</p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
