--- a/Fittings2.html
+++ b/Fittings2.html
@@ -565,7 +565,7 @@
                     <!-- details -->
                     <!-- type heading -->
                     <div id="Stainless" class="header">
-                        <p>STAINLESS STEEL FITTINGS</p>
+                        <p>Stainless Steel Fittings</p>
                     </div>
                     <!-- type heading -->
                     <section class="p-b-60">
@@ -772,7 +772,7 @@
                         </div>
                     </section>
                     <div id="Nickel" class="header">
-                        <p>NICKEL ALLOY FITTINGS</p>
+                        <p>Nickel Alloy Fittings</p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -959,7 +959,7 @@
                         </div>
                     </section>
                     <div id="Non Ferrous" class="header">
-                        <p>Non Ferrous Metal</p>
+                        <p>Non Ferrous Metal fittings</p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -1109,7 +1109,7 @@
                         </div>
                     </section>
                     <div id="Alloy" class="header">
-                        <p>Alloy Steel</p>
+                        <p>Alloy Steel Fittings</p>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
@@ -1524,9 +1524,11 @@
                             </div>
                         </div>
                     </section>
+
                     <div id="products-section" class="header">
-                        <p>Fitting Products</p>
+                        <p>Fittings Products</p>
                     </div>
+                    
                     <section class="p-b-60">
                         <div class="container main-container">
                             <div class="gallery-container">
@@ -1581,6 +1583,10 @@
                             </div>
                         </div>
                     </section>
+
+
+
+
 </body>
 <!-- Fixed Footer -->
 <footer id="footer">
