--- a/Sub-Products/Bars & Wires/DishEnd.html
+++ b/Sub-Products/Bars & Wires/DishEnd.html
@@ -71,6 +71,8 @@
             </div>
         </nav>
     </header>
+
+
     <section id="Contain-product">
     <div class="container-fluid p-0 m-0 heading-contain">
         <div class="container p-0">
@@ -84,11 +86,12 @@
             </div>
         </div>
     </div>
+
     <div class="container intro-contain1">
         <div class="row">
             <div class="col-lg-6 p-0">
                 <div class="product-image">
-                    <img alt="Wire Rode" src="../../Images/Bars&Wire/dishEnd.jpeg">
+                    <img alt="Wire Rode" src="Images/Bars&Wire/dishEnd.jpeg">
                     </img>
                 </div>
             </div>
