changing product and replace new one

--- a/CustomizedFabrication2.html
+++ b/CustomizedFabrication2.html
@@ -774,7 +774,7 @@
                             </div>
                     </section>
                     <div id="products-section" class="header">
-                        <h1>Fasteners Products</h1>
+                        <h1>Customized Fabrication Products</h1>
                     </div>
                     <section class="p-b-60">
                         <div class="container main-container">
