--- a/Pipes&Tubes2.html
+++ b/Pipes&Tubes2.html
@@ -635,7 +635,7 @@
                                         <div class="portfolio-item">
                                             <div class="portfolio-item-wrap">
                                                 <div class="portfolio-image">
-                                                    <a href="#"><img src="Images\Pipe&Tube\welded2.jpg" alt="JS" class="img-fluid rounded"></a>
+                                                    <a href="#"><img src="Images\Pipe&Tube\304-stainless-steel-seamless-pipe-500x500.jpg" alt="JS" class="img-fluid rounded"></a>
                                                 </div>
                                             </div>
                                         </div>
