chnge and add product

--- a/Pipes&Tubes2.html
+++ b/Pipes&Tubes2.html
@@ -1709,6 +1709,14 @@
                                         <img src="Images\Pipe&Tube\welded-pipes1.jpg" alt="Welded Pipe">
                                     </div>
                                 </div>
+                                <div class="gallery-box">
+                                    <div class="gallery-header">
+                                        Seamless Pipes
+                                    </div>
+                                    <div class="gallery-image">
+                                        <img src="Images\Pipe&Tube\304-stainless-steel-seamless-pipe-500x500.jpg" alt="Welded Pipe">
+                                    </div>
+                                </div>
                                 
                             </div>
                         </div>
