cust fab product changed

--- a/CustomizedFabrication2.html
+++ b/CustomizedFabrication2.html
@@ -781,23 +781,31 @@
                             <div class="gallery-container">
                                 <div class="gallery-box">
                                     <div class="gallery-header">
-                                        304-stainless-steel-pipe
+                                        Air Heater Ferrules
                                     </div>
                                     <div class="gallery-image">
-                                        <img src="Images\Structural product\304-stainless-steel-pipe.jpg" alt="Welded Pipe">
+                                        <img src="Images\Structural product\Air Heater Ferrules.jpg" alt="Welded Pipe">
                                     </div>
                                 </div>
                                 <div class="gallery-box">
                                     <div class="gallery-header">
-                                        E-Beams
+                                        Boiler Tube Ferrule
                                     </div>
                                     <div class="gallery-image">
-                                        <img src="Images\Structural product\e-beams.jpg" alt="Welded Pipe">
+                                        <img src="Images\Structural product\boiler Heater Ferrules.jpg" alt="Welded Pipe">
                                     </div>
                                 </div>
                                 <div class="gallery-box">
                                     <div class="gallery-header">
-                                        SS Puddle
+                                        Dish End
+                                    </div>
+                                    <div class="gallery-image">
+                                        <img src="Images/Bars&Wire/dishEnd.jpeg" alt="Welded Pipe">
+                                    </div>
+                                </div>
+                                <div class="gallery-box">
+                                    <div class="gallery-header">
+                                        Puddle Flange
                                     </div>
                                     <div class="gallery-image">
                                         <img src="Images\Structural product\SS puddle flanges.jpg" alt="Welded Pipe">
@@ -805,18 +813,10 @@
                                 </div>
                                 <div class="gallery-box">
                                     <div class="gallery-header">
-                                        stainless-steel-flat
+                                        Air Pre Heater Ferrule
                                     </div>
                                     <div class="gallery-image">
-                                        <img src="Images\Structural product\stainless-steel-flat.jpg" alt="Welded Pipe">
-                                    </div>
-                                </div>
-                                <div class="gallery-box">
-                                    <div class="gallery-header">
-                                        Hollow-Steel-Pipe
-                                    </div>
-                                    <div class="gallery-image">
-                                        <img src="Images\Structural product\Hollow-Steel-Pipe.jpg" alt="Welded Pipe">
+                                        <img src="Images\Structural product\Air Pre Heater Ferrule.jpg" alt="Welded Pipe">
                                     </div>
                                 </div>
                             </div>
