edited home page

--- a/Index.html
+++ b/Index.html
@@ -103,7 +103,7 @@
                                   </div>
                                 </div>
                                 <div class="text-bottom">
-                                  <div id="capt" >We are India’s largest Manufacturers of Pipes and Tubes. We Manufacturer all types of Pipes and Tubes.</div>
+                                  <div id="capt" >Empowering industries with premium quality innovative stainless steel solutions</div>
                                 </div>
                               </div>
 
@@ -142,12 +142,12 @@
                         <div class="animated-title">
                             <div class="text-top">
                               <div>
-                                <span id="heads" >Welcome to the Varcas Stainless</span>
-                                <!-- <span>Welcome to the Varcas Stainless</span> -->
+                                <span id="heads" style="color:yellow" >Welcome to the Varcas Stainless</span>
+                                <!-- <span >Welcome to the Varcas Stainless</span> -->
                               </div>
                             </div>
                             <div class="text-bottom">
-                              <div id="capt" >Unmacthed Quality , Unparalleled Support</div>
+                              <div id="capt" style="color:lightcoral;" >Unmacthed Quality , Unparalleled Support</div>
                             </div>
                           </div>
                   
