slider text color chnaged

--- a/Index.html
+++ b/Index.html
@@ -103,7 +103,7 @@
                                   </div>
                                 </div>
                                 <div class="text-bottom">
-                                  <div id="capt" >Empowering industries with premium quality innovative stainless steel solutions</div>
+                                  <div id="capt" >We offer a comprehensive range of high-quality products to meet all your piping needs. From industrial applications to specialized solutions, our expertise ensures reliability and excellence in every piece.</div>
                                 </div>
                               </div>
 
@@ -120,12 +120,12 @@
                         <div class="animated-title">
                             <div class="text-top">
                               <div>
-                                <span id="heads" >Welcome to the Varcas Stainless</span>
+                                <span id="heads" style="color:#0fdffb;">Welcome to the Varcas Stainless</span>
                                 <!-- <span>Welcome to the Varcas Stainless</span> -->
                               </div>
                             </div>
                             <div class="text-bottom">
-                              <div id="capt" >Delivering delightful customer experiences with exceptional steel solutions and unmatched technical support.</div>
+                              <div id="capt" style="color:#0fdffb; font-weight: bolder; " >Delivering delightful customer experiences with exceptional steel solutions and unmatched technical support.</div>
                             </div>
                           </div>
                     
@@ -142,12 +142,12 @@
                         <div class="animated-title">
                             <div class="text-top">
                               <div>
-                                <span id="heads" style="color:yellow" >Welcome to the Varcas Stainless</span>
+                                <span id="heads" style="color:#0fdffb" >Welcome to the Varcas Stainless</span>
                                 <!-- <span >Welcome to the Varcas Stainless</span> -->
                               </div>
                             </div>
                             <div class="text-bottom">
-                              <div id="capt" style="color:lightcoral;" >Unmacthed Quality , Unparalleled Support</div>
+                              <div id="capt" style="color:#0fdffb; font-weight: bolder; text-align: center;" >Unmacthed Quality , Unparalleled Support</div>
                             </div>
                           </div>
                   
