--- a/material.html
+++ b/material.html
@@ -102,9 +102,9 @@
     </section>
     <section id="material-contain">
         <div id="section1" class="section">
-            <div class="container">
+            <div class="container main-contain">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 slider-material">
                         <div class="slider-material">
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner slider-material-wrapper">
@@ -134,12 +134,12 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="intro-material">
-                            <h2> What is Stainless Steel </h2>
+                            <h1> What is Stainless Steel </h1>
                             <p>Stainless steel is a corrosion-resistant alloy that has found a multitude of applications across various industries due to its exceptional properties, making it a material of choice for a wide range of products. It is known for its resistance to rust, staining, and corrosion, making it highly durable and low-maintenance. The primary alloying elements in stainless steel are chromium, nickel, molybdenum, and sometimes other elements, each contributing to its unique characteristics.</p>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row p-2 d-flex align-items-center h-100">
                     <div class="col-lg-6">
                         <div class="ss-compo-wrapper">
                             <h2>Composition of Stainless Steel:</h2>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container main-contain">
                 <h2 class="mt-3 mb-4">Types of Stainless Steel</h2>
                 <div class="accordion" id="stainlessSteelAccordion">
                     <!-- Austenitic Stainless Steel -->
@@ -230,7 +230,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container main-contain">
                 <h2 class="mt-3 mb-4">Stainless Steel Material Properties</h2>
                 <div class="table-responsive">
                     <table class="table table-bordered">
@@ -325,7 +325,7 @@
                     </table>
                 </div>
             </div>
-            <div class="container">
+            <div class="container main-contain">
                 <h2 class="mt-3 mb-4">Stainless Steel Size Ranges</h2>
                 <div class="table-responsive">
                     <table class="table table-bordered">
@@ -419,15 +419,15 @@
             <section class="background-colored">
                 <div id="particles-dots" class="particles"></div>
                 
-                <div class="container">
-                    <div class="text-light text-center">
+                <div class="container main-contain">
+                    <div class="text-center">
                         <h1>TECHNICAL INFORMATION</h1>
                     </div>
                 </div>
             </section>
             <!-- end: Page title -->
             <section class="p-b-60">
-                <div class="container">
+                <div class="container main-contain">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="accordion accordion-shadow">
@@ -436,8 +436,8 @@
                                     <div class="ac-content">
                                         <p>Chemical compositions of AISI (ASTM/ASME) and UNS austenitic stainless steel grades.</p>
                                         <p>The data given is not intended to replace that shown in individual standards to which reference should always be made.</p>
-                                        <h4 class="m-t-10">Standard 300 series austenitic grades:</h4>
-                                        <div class="table-responsive">
+                                        <h4 class="m-t-10 fw-bold pt-2">Standard 300 series austenitic grades:</h4>
+                                        <div class="table-responsive pt-2">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
@@ -925,8 +925,8 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <h4 class="m-t-10">Standard 200 series austenitic grades:</h4>
-                                        <div class="table-responsive">
+                                        <h4 class="m-t-10 fw-bold pt-2">Standard 200 series austenitic grades:</h4>
+                                        <div class="table-responsive pt-2">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
@@ -1232,8 +1232,8 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <h4 class="m-t-10">Special austenitic grades:</h4>
-                                        <div class="table-responsive">
+                                        <h4 class="m-t-10 fw-bold pt-2">Special austenitic grades:</h4>
+                                        <div class="table-responsive pt-2">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
@@ -1580,8 +1580,8 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <h4 class="m-t-10">Chemical compositions of AISI (ASTM/ASME) and UNS ferritic stainless steel grades:</h4>
-                                        <div class="table-responsive">
+                                        <h4 class="m-t-10 fw-bold pt-2">Chemical compositions of AISI (ASTM/ASME) and UNS ferritic stainless steel grades:</h4>
+                                        <div class="table-responsive pt-2">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
@@ -1985,8 +1985,8 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <h4 class="m-t-10">Special ferritic grades:</h4>
-                                        <div class="table-responsive">
+                                        <h4 class="m-t-10 fw-bold pt-2">Special ferritic grades:</h4>
+                                        <div class="table-responsive pt-2">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
@@ -2236,8 +2236,8 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <h4 class="m-t-10">Chemical compositions of AISI (ASTM/ASME) and UNS heat resisting stainless steel grades:</h4>
-                                        <div class="table-responsive">
+                                        <h4 class="m-t-10 fw-bold pt-2">Chemical compositions of AISI (ASTM/ASME) and UNS heat resisting stainless steel grades:</h4>
+                                        <div class="table-responsive pt-2">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
@@ -2809,8 +2809,8 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <h4 class="m-t-10">Chemical compositions of AISI (ASTM/ASME) and UNS martensitic and precipitation hardening stainless steel grades:</h4>
-                                        <div class="table-responsive">
+                                        <h4 class="m-t-10 fw-bold pt-2">Chemical compositions of AISI (ASTM/ASME) and UNS martensitic and precipitation hardening stainless steel grades:</h4>
+                                        <div class="table-responsive pt-2">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
@@ -3270,8 +3270,11 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <h4 class="m-t-10">Composition of Duplex Stainless Steel:</h4>
-                                        <img src="Images\table-img.jpg" class="img-fluid rounded" alt="">
+                                        <h4 class="m-t-10 fw-bold pt-4 p-3">Composition of Duplex Stainless Steel:</h4>
+                                        <div class="img-mat">
+                                            <img src="Images\table-img.jpg" class="img-fluid rounded" alt="">
+                                        </div>
+                                        
                                     </div>
                                 </div>
             </section>
