--- a/Pipes&Tubes2.html
+++ b/Pipes&Tubes2.html
@@ -448,7 +448,7 @@
                                     <div class="col-lg-6 p-0 item-intro">
                                         <div class="item-intro-text">
                                             <h2>
-                                                Introduction to Stainless Steel Pipes & Tubes:
+                                                Introduction to Pipes & Tubes:
                                             </h2>
                                             <p>
                                                 Pipes and tubes are fundamental components in various industries, providing essential pathways for transporting fluids, gases, and sometimes solids. While they are often used interchangeably, there are distinct differences in their definitions, manufacturing processes, and applications.
