--- a/ContactUs.html
+++ b/ContactUs.html
@@ -31,7 +31,7 @@
         <nav class="navbar navbar-expand-lg p-0">
             <div class="container">
                 <div class="logo">
-                    <a class="navbar-brand" href="Index.html"><img src="./Images/logo.jpg" /></a>
+                    <a class="navbar-brand" href="index.html"><img src="./Images/logo.jpg" /></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="Index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="products.html">Products</a>
