--- a/Flanges2.html
+++ b/Flanges2.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg p-0">
         <div class="container">
             <div class="logo">
-                <a class="navbar-brand" href="Index.html">
+                <a class="navbar-brand" href="index.html">
                     <img src="./Images/logo.jpg" />
                 </a>
             </div>
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="Index.html">
+                        <a class="nav-link" href="index.html">
                             Home
                         </a>
                     </li>
